--- a/src/components/helene/Index.css
+++ b/src/components/helene/Index.css
@@ -9,3 +9,9 @@
     display: table;
     clear: both;
   }
+
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+    }
+  }
